--- a/IntroToDiscreteMaths/IDMA_Lectures.ipynb
+++ b/IntroToDiscreteMaths/IDMA_Lectures.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true
+      "toc_visible": true,
+      "generative_ai_disabled": true
     },
     "kernelspec": {
       "name": "python3",
@@ -40,7 +41,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "id": "sXVDx23hPt1c"
       },
@@ -105,7 +106,7 @@
       "metadata": {
         "id": "ixwsatSkR_IW"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -127,7 +128,7 @@
       "metadata": {
         "id": "15JImEg0UCum"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -140,7 +141,7 @@
       "metadata": {
         "id": "X309PHK5UDu5"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -163,7 +164,7 @@
       "metadata": {
         "id": "4CkvMCoUaMbM"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -184,7 +185,7 @@
       "metadata": {
         "id": "hy9PjueSaU0X"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -209,7 +210,7 @@
       "metadata": {
         "id": "xIjhkCJ_Vlbp"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -244,7 +245,7 @@
       "metadata": {
         "id": "V3uNupZcZcmx"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -267,7 +268,7 @@
       "metadata": {
         "id": "MyzvSXDbdWbH"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -291,7 +292,7 @@
       "metadata": {
         "id": "CyX3zgBDdjf-"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -315,7 +316,7 @@
       "metadata": {
         "id": "8329HSfYeI2X"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -355,7 +356,7 @@
       "metadata": {
         "id": "40rWalAT45aC"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -420,7 +421,7 @@
       "metadata": {
         "id": "m1c7ELrFuVWe"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -442,7 +443,7 @@
       "metadata": {
         "id": "jmStuTgt0Cl-"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -472,7 +473,7 @@
       "metadata": {
         "id": "0XB0ghJFwGSP"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -497,7 +498,7 @@
       "metadata": {
         "id": "Mreg1KnJwz74"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -522,7 +523,7 @@
       "metadata": {
         "id": "OmdUSTsfxLBT"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -544,7 +545,7 @@
       "metadata": {
         "id": "x3MB0MR7xmoK"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -566,7 +567,7 @@
       "metadata": {
         "id": "puBwybw4y24x"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -579,7 +580,7 @@
       "metadata": {
         "id": "HA9KEQJqdmGj"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -600,7 +601,7 @@
       "metadata": {
         "id": "VGy99RTozYaD"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -634,7 +635,7 @@
       "metadata": {
         "id": "f1CEePfz1RfN"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -657,7 +658,7 @@
       "metadata": {
         "id": "LWpYHrJb2Ry8"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -684,7 +685,7 @@
       "metadata": {
         "id": "QKX6ghzt3Lfx"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -722,7 +723,7 @@
       "metadata": {
         "id": "ZNae3hyY7Gft"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -744,7 +745,7 @@
       "metadata": {
         "id": "AP-KIxt27UBb"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -766,7 +767,7 @@
       "metadata": {
         "id": "lVF_ueP27kBj"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -802,7 +803,7 @@
       "metadata": {
         "id": "pqC28MwH-I8e"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -836,7 +837,7 @@
       "metadata": {
         "id": "t5bjHJcR-SkP"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -859,7 +860,7 @@
       "metadata": {
         "id": "W-mNF1KZ_Q6C"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -887,7 +888,7 @@
       "metadata": {
         "id": "0sBMz0_W8VcH"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -909,7 +910,7 @@
       "metadata": {
         "id": "A2XUayhB8vmo"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -931,7 +932,7 @@
       "metadata": {
         "id": "xCX2EnuA9N_G"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -954,7 +955,7 @@
       "metadata": {
         "id": "YRcHLuS59c8x"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1015,7 +1016,7 @@
       "metadata": {
         "id": "0yjTt7kEMbif"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1038,7 +1039,7 @@
       "metadata": {
         "id": "3RT2TyFgMv8a"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1060,7 +1061,7 @@
       "metadata": {
         "id": "4TRjBgBwNJ1d"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1085,7 +1086,7 @@
       "metadata": {
         "id": "liaZt6_mSy2q"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1115,7 +1116,7 @@
       "metadata": {
         "id": "sbpaiMNGNwMk"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1136,7 +1137,7 @@
       "metadata": {
         "id": "hKHzz2EeOGir"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1168,7 +1169,7 @@
       "metadata": {
         "id": "-RUHVAdYRyg_"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1198,7 +1199,7 @@
       "metadata": {
         "id": "qfkTbSQeidxu"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1240,7 +1241,7 @@
       "metadata": {
         "id": "J26Zqm3KTQp-"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1279,7 +1280,7 @@
       "metadata": {
         "id": "QIRhkqoZKV0e"
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1301,7 +1302,7 @@
       "metadata": {
         "id": "YnVsPQfYK1qt"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1352,7 +1353,7 @@
       "metadata": {
         "id": "rwCiySKItBDP"
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1380,7 +1381,7 @@
       "metadata": {
         "id": "s047z-Le-PAm"
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1410,7 +1411,7 @@
       "metadata": {
         "id": "jI4fIb2h_8Ey"
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1434,7 +1435,7 @@
       "metadata": {
         "id": "L56JpF9SBGQw"
       },
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1458,7 +1459,7 @@
       "metadata": {
         "id": "LHbRwndBBYEe"
       },
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1482,7 +1483,7 @@
       "metadata": {
         "id": "j--1sQ4sEAlb"
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1526,7 +1527,7 @@
       "metadata": {
         "id": "fvFNz4BnBhOx"
       },
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1552,7 +1553,7 @@
       "metadata": {
         "id": "DljxLlLeEoJa"
       },
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1577,7 +1578,7 @@
       "metadata": {
         "id": "PS7gl7TzDtp7"
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1602,7 +1603,7 @@
       "metadata": {
         "id": "LG0TWHaoNHPt"
       },
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1660,7 +1661,7 @@
       "metadata": {
         "id": "QO2bHf2UDfLb"
       },
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1690,7 +1691,7 @@
       "metadata": {
         "id": "5PJq5pD1EKGN"
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1717,7 +1718,7 @@
       "metadata": {
         "id": "xgNzY9YPE3P9"
       },
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1744,7 +1745,7 @@
       "metadata": {
         "id": "YRTUyuciFrtH"
       },
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1773,7 +1774,7 @@
       "metadata": {
         "id": "WU91lnSqGKsG"
       },
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1835,7 +1836,7 @@
       "metadata": {
         "id": "MIxsBRH3ToQ7"
       },
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1858,7 +1859,7 @@
       "metadata": {
         "id": "X4toz9JAUUv6"
       },
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1882,7 +1883,7 @@
       "metadata": {
         "id": "sq5kg5oOY4Op"
       },
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1905,7 +1906,7 @@
       "metadata": {
         "id": "whSJabUEY8TZ"
       },
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1930,7 +1931,7 @@
       "metadata": {
         "id": "rAhQTrB9ZfQI"
       },
-      "execution_count": 88,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1955,7 +1956,7 @@
       "metadata": {
         "id": "ULPZIvA1Z_Vd"
       },
-      "execution_count": 89,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1979,7 +1980,7 @@
       "metadata": {
         "id": "Ns_LoJq7bn-K"
       },
-      "execution_count": 90,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2012,7 +2013,7 @@
       "metadata": {
         "id": "q8nlG_86BfNo"
       },
-      "execution_count": 91,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2040,7 +2041,7 @@
       "metadata": {
         "id": "N9ydL9DxBruB"
       },
-      "execution_count": 92,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2080,7 +2081,7 @@
       "metadata": {
         "id": "1KJ-4rXxdDVc"
       },
-      "execution_count": 93,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2107,7 +2108,7 @@
       "metadata": {
         "id": "h45katgovz1B"
       },
-      "execution_count": 94,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2132,7 +2133,7 @@
       "metadata": {
         "id": "tEWARGlN-klU"
       },
-      "execution_count": 95,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2159,7 +2160,7 @@
       "metadata": {
         "id": "BJpN1DJYx50K"
       },
-      "execution_count": 96,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2282,7 +2283,7 @@
       "metadata": {
         "id": "87qThvalQD-c"
       },
-      "execution_count": 97,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2308,7 +2309,7 @@
       "metadata": {
         "id": "kY4RZBhlYXl5"
       },
-      "execution_count": 98,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2333,7 +2334,7 @@
       "metadata": {
         "id": "4sj1e7Yfa-Sp"
       },
-      "execution_count": 99,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2396,7 +2397,7 @@
       "metadata": {
         "id": "WfRiJFquQpqb"
       },
-      "execution_count": 100,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2566,7 +2567,7 @@
       "metadata": {
         "id": "9ig7b7GIZ9j1"
       },
-      "execution_count": 108,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2589,7 +2590,7 @@
       "metadata": {
         "id": "Hj3Ak2yUaHhE"
       },
-      "execution_count": 107,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2610,7 +2611,7 @@
       "metadata": {
         "id": "tFgD2oeDas8x"
       },
-      "execution_count": 106,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2644,7 +2645,7 @@
       "metadata": {
         "id": "7H1ttZd8bhPM"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2673,7 +2674,7 @@
       "metadata": {
         "id": "unHoQVPIb1ls"
       },
-      "execution_count": 109,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2696,7 +2697,7 @@
       "metadata": {
         "id": "pM7iHqXHcaP0"
       },
-      "execution_count": 105,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2709,7 +2710,7 @@
       "metadata": {
         "id": "AEbwtv2RdMrj"
       },
-      "execution_count": 104,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2734,7 +2735,7 @@
       "metadata": {
         "id": "eJS8J2N0dqp6"
       },
-      "execution_count": 103,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2758,7 +2759,7 @@
       "metadata": {
         "id": "aPhFEXBCd_nJ"
       },
-      "execution_count": 102,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2773,7 +2774,7 @@
       "metadata": {
         "id": "Z79TLl8DeIMI"
       },
-      "execution_count": 101,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2799,7 +2800,7 @@
       "metadata": {
         "id": "5Vzjhyo5esks"
       },
-      "execution_count": 110,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2840,7 +2841,7 @@
       "metadata": {
         "id": "kGYoOW_-jNwQ"
       },
-      "execution_count": 111,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2853,7 +2854,7 @@
       "metadata": {
         "id": "uQh8K8ZkidzP"
       },
-      "execution_count": 112,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2866,7 +2867,7 @@
       "metadata": {
         "id": "Aw9-SWBZjst0"
       },
-      "execution_count": 113,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2879,7 +2880,7 @@
       "metadata": {
         "id": "f0EAcJ1li8k9"
       },
-      "execution_count": 115,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2895,7 +2896,7 @@
       "metadata": {
         "id": "rj0Q4hWojZmL"
       },
-      "execution_count": 116,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2927,7 +2928,7 @@
       "metadata": {
         "id": "3w8M1Uxnf67Z"
       },
-      "execution_count": 117,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2956,7 +2957,7 @@
       "metadata": {
         "id": "LqJd4GrigDBh"
       },
-      "execution_count": 118,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2979,7 +2980,7 @@
       "metadata": {
         "id": "BHkwpvTdhZPy"
       },
-      "execution_count": 119,
+      "execution_count": null,
       "outputs": []
     },
     {
