--- a/IntroToDiscreteMaths/IDMA_Seminars.ipynb
+++ b/IntroToDiscreteMaths/IDMA_Seminars.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true
+      "toc_visible": true,
+      "generative_ai_disabled": true
     },
     "kernelspec": {
       "name": "python3",
@@ -18,11 +19,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Here are a selection of questions for you to practise the topics we have seen in the lectures. These questions are not marked, they are just for you to practise your coding.\n",
+        "Here are a selection of questions for you to practise the topics we have seen in the demonstrations. These questions are not marked, they are just for you to practise your coding.\n",
         "\n",
         "Coding is best learnt by doing, so do have a go at all the questions below.\n",
         "\n",
-        "In the seminars Jason and Mark will help you with any of the questions where you are struggling or need assistance."
+        "In the seminars Jason and Jonathan will help you with any of the questions where you are struggling or need assistance."
       ],
       "metadata": {
         "id": "jTp_XTqeKynF"
@@ -478,7 +479,7 @@
       "metadata": {
         "id": "9MghykvNiJ96"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
