--- a/IntroToDiscreteMaths/AlgorithmInvestigation.ipynb
+++ b/IntroToDiscreteMaths/AlgorithmInvestigation.ipynb
@@ -3,7 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "generative_ai_disabled": true
     },
     "kernelspec": {
       "name": "python3",
@@ -133,7 +134,7 @@
       "metadata": {
         "id": "wwQivRKt88mM"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
