--- a/IntroToDiscreteMaths/IDMA_Further_Questions.ipynb
+++ b/IntroToDiscreteMaths/IDMA_Further_Questions.ipynb
@@ -3,7 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "generative_ai_disabled": true
     },
     "kernelspec": {
       "name": "python3",
