--- a/IntroToDiscreteMaths/IDMA_Lectures.ipynb
+++ b/IntroToDiscreteMaths/IDMA_Lectures.ipynb
@@ -667,7 +667,7 @@
         "We can extract substrings using [].\n",
         "If x is a string, then x[i] will return the i'th letter of x.\n",
         "\n",
-        "And x[a,b] will return all the letters from position a to position b-1"
+        "And x[a:b] will return all the letters from position a to position b-1"
       ],
       "metadata": {
         "id": "moNISIBX28h3"
@@ -695,7 +695,7 @@
         "\n",
         "\n",
         "*   **The first letter is position 0** (computer scientist like to count from zero, mathematicians like to count from 1, it causes much continued confusion, you will almost certainly cause a bug at some point in your life because of this).\n",
-        "*   x[a,b] does not return the b'th letter, it returns the letters before position b.\n",
+        "*   x[a:b] does not return the b'th letter, it returns the letters before position b.\n",
         "\n"
       ],
       "metadata": {
