Convert cwk to colab format

--- a/IntroToDiscreteMaths/IDMA_Coursework.ipynb
+++ b/IntroToDiscreteMaths/IDMA_Coursework.ipynb
@@ -200,7 +200,7 @@
     "\n",
     "4.   Create an empty dictionary called `odds` and then populate it using a for loop, where the keys are the positions of odd numbers in `ID` and `odds[i]` is equal to `ID[i]`.\n",
     "\n",
-    "5.   Using exception handing (i.e. using `try` and `except`), try and set `position_3` equal to `odds[3]`, if this key is not in odds, set `position_3` equal to the string \"3rd number is not odd\". Print `position_3` for both cases.\n",
+    "5.   Using exception handing (i.e. using `try` and `except`), try and set `position_3` equal to `odds[3]`, if this results in an error, then set `position_3` equal to the string \"3rd number is not odd\". Print `position_3` for both cases.\n",
     "\n",
     "6.   Create a copy of `ID` and call it `ID_original`.\n",
     "\n",
