--- a/IntroToDiscreteMaths/IDMA_Coursework.ipynb
+++ b/IntroToDiscreteMaths/IDMA_Coursework.ipynb
@@ -43,7 +43,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "dZslDQl5Maxr"
+        "id": "JNWzoAWwMvSJ"
       },
       "source": [
         "# IMPORTANT\n",
@@ -59,7 +59,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "UVB482IKMaxr"
+        "id": "bTzDmV7AMvSJ"
       },
       "outputs": [],
       "source": [
@@ -72,12 +72,11 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "cellView": "form",
-        "id": "1lLqrcRKMaxs"
+        "id": "zn1NrTsFMvSK"
       },
       "outputs": [],
       "source": [
-        "# @title\n",
+        "# @title  {\"display-mode\":\"form\"}\n",
         "question2 = '''Create a function called \"common\" that does the following:\n",
         "\n",
         "    1) It should have 2 arguments called x and y;\\n'''\n",
@@ -260,8 +259,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "-9GDr_lNMaxu",
-        "outputId": "b5e07bd3-e2a2-4975-b2b9-a94085a5d48e"
+        "id": "Owo11agDMvSM",
+        "outputId": "64dfdc74-7c17-4a2c-d2dc-b101da9fc0cf"
       },
       "outputs": [
         {
@@ -373,7 +372,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "QsL9unUBMaxw"
+        "id": "xA18TyknMvSN"
       },
       "source": [
         "# Question 4 : Reflection"
@@ -382,7 +381,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "qbpfkw0NMaxw"
+        "id": "ao53cSNOMvSN"
       },
       "source": [
         "Write a paragraph (approximately 200 words) which reflects on what you have learnt about Python and coding thus far. Your answer should cover the folllwing points:\n",
@@ -399,7 +398,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "yoYqtcIGMaxw"
+        "id": "t_sUQgRvMvSN"
       },
       "outputs": [],
       "source": [
