--- a/IntroToDiscreteMaths/IDMA_Coursework.ipynb
+++ b/IntroToDiscreteMaths/IDMA_Coursework.ipynb
@@ -76,7 +76,7 @@
       },
       "outputs": [],
       "source": [
-        "# @title  { form-width: "1px", display-mode: "form" }\n",
+        "# @title  { display-mode: "form" }\n",
         "question2 = '''Create a function called \"common\" that does the following:\n",
         "\n",
         "    1) It should have 2 arguments called x and y;\\n'''\n",
