--- a/IntroToDiscreteMaths/IDMA_Coursework.ipynb
+++ b/IntroToDiscreteMaths/IDMA_Coursework.ipynb
@@ -43,7 +43,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "JNWzoAWwMvSJ"
+        "id": "hF978wI6JyiS"
       },
       "source": [
         "# IMPORTANT\n",
@@ -57,26 +57,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "bTzDmV7AMvSJ"
+        "id": "2R_VAIaEJyiS"
       },
       "outputs": [],
       "source": [
         "# Enter your name and student ID below, between the ''\n",
         "name = ''\n",
-        "studentID = 'N6452354'"
+        "studentID = 'N0123456'"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
-        "id": "zn1NrTsFMvSK"
+        "id": "-NCycdXeJyiS"
       },
       "outputs": [],
       "source": [
-        "# @title  { display-mode: "form" }\n",
+        "# @title  {\"display-mode\":\"form\"}\n",
         "question2 = '''Create a function called \"common\" that does the following:\n",
         "\n",
         "    1) It should have 2 arguments called x and y;\\n'''\n",
@@ -213,7 +213,7 @@
         "\n",
         "7.   Use a while loop to append the number `number_repeated_digits+3` onto the end of `ID` until the numbers in `ID` sum to greater than 55. Then print the length of `ID`.\n",
         "\n",
-        "8.   Set `ratio` equal to the length of `ID` divided by the length of `ID_original`. If ratio equals 1 then print \"ratio equals 1\", if ratio is not 1 but is an integer then print \"ratio is a whole number greater than 1, otherwise print \"ratio is not an integer\".\n",
+        "8.   Set `ratio` equal to the length of `ID` divided by the length of `ID_original`. If `ratio` equals 1 then print \"ratio equals 1\", if `ratio` is not 1 but is an integer then print \"ratio is a whole number greater than 1, otherwise print \"ratio is not an integer\".\n",
         "\n",
         "\n",
         "**Total marks: 25**"
@@ -221,14 +221,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "WMfzRAh6pPNM"
       },
       "outputs": [],
       "source": [
         "# Answer to Question 1\n",
-        "\n",
         "\n",
         "\n",
         "\n",
@@ -257,28 +256,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
-        "id": "Owo11agDMvSM",
-        "outputId": "64dfdc74-7c17-4a2c-d2dc-b101da9fc0cf"
+        "id": "atLL3Ep5JyiU",
+        "outputId": "ae7af596-0fa3-42a4-ea67-b84fadee09a2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Create a function called \"common\" that does the following:\n",
             "\n",
             "    1) It should have 2 arguments called x and y;\n",
             "    2) check if x and y are both int's, if they are not then print 'Warning: arguments of wrong type',\n",
             "\t and convert both to int;\n",
-            "    3) set x equal to 18(x+25), set y equal to 20y+14, and then print both;\n",
-            "    4) use a while loop to find all common divisors of x and y,\n",
-            " \t and save them in a list called `output`, and print output;\n",
+            "    3) set x equal to 9(x+35), set y equal to 8y+2, and then print both;\n",
+            "    4) use a while loop to find all common multiples of x and y less than 1000,\n",
+            " \t and save them in a set called `output`, and print output;\n",
             "    5) return the sum of all the numbers in `output`.\n",
             "\n",
             "\n",
-            "Call your function with argument x and y as the the second and sixth number of your student id,\n",
+            "Call your function with argument x and y as the the second and last number of your student id,\n",
             "and print the output.\n",
             "\n",
             "Total marks: 25\n",
@@ -292,7 +294,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "zM_H2pnxr10F"
       },
@@ -342,12 +344,12 @@
         "   \n",
         "&nbsp;   \n",
         "   \n",
-        "2.\n",
-        "    a. Create a set `alpha_incorrect` which contains all pairs (x,y) where `alpha` differs from the polynomial chosen for `alpha_answer` in part 1.\n",
-        "     \n",
-        "    b. Print the string \"Function alpha is incorrect for the following\"\n",
+        "2.  &nbsp;\n",
+        "    2.1 Create a set `alpha_incorrect` which contains all pairs (x,y) where `alpha` differs from the polynomial chosen for `alpha_answer` in part 1.\n",
+        "\n",
+        "    2.2 Print the string \"Function alpha is incorrect for the following\"\n",
         "    \n",
-        "    c. Using a `for` loop, for each (x,y) in `alpha_incorrect` print \"Entering x and y returns p but should return q\", where x, y, p and q are replaced with the actual numbers, that is, p is the value of `alpha(x,y)` and q is the  value of the chosen polynomial evaluated at (x,y).\n",
+        "    2.3 Using a `for` loop, for each (x,y) in `alpha_incorrect` print \"Entering x and y returns p but should return q\", where x, y, p and q are replaced with the actual numbers, that is, p is the value of `alpha(x,y)` and q is the  value of the chosen polynomial evaluated at (x,y).\n",
         "\n",
         "\n",
         "**Total marks: 25**"
@@ -355,7 +357,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "id": "7tzm_NH0r408"
       },
@@ -372,7 +374,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "xA18TyknMvSN"
+        "id": "hxaQEijLJyiV"
       },
       "source": [
         "# Question 4 : Reflection"
@@ -381,7 +383,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "ao53cSNOMvSN"
+        "id": "z8AqhrL5JyiV"
       },
       "source": [
         "Write a paragraph (approximately 200 words) which reflects on what you have learnt about Python and coding thus far. Your answer should cover the folllwing points:\n",
@@ -396,9 +398,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
-        "id": "t_sUQgRvMvSN"
+        "id": "39YiM4eQJyiV"
       },
       "outputs": [],
       "source": [
