Fixed moderation comments

--- a/PureMaths/FoPM_cwk_2025_26.ipynb
+++ b/PureMaths/FoPM_cwk_2025_26.ipynb
@@ -50,7 +50,7 @@
     "# **IMPORTANT:** Follow these instruction before completing the coursework.\n",
     "\n",
     "1.   Enter your student ID below, by replacing N0123456 with your own student id.\n",
-    "2.   Enter your name below by replace Joe Bloggs with your own name.\n",
+    "2.   Enter your name below by replacing Joe Bloggs with your own name.\n",
     "3.   At the top click \"Runtime\" > \"Run all\"\n",
     "\n",
     "You do not need to click Show code, for any of the instances below. But you should rerun the code each time you open the notebook, again by selecting \"Runtime\" > \"Run all\"\n",
@@ -832,14 +832,13 @@
     "4.    Is $G$ Abelian?\n",
     "5.    Does $G$ have a subgroup of order 4?\n",
     "6.    Is $\\{0,1\\}$ a subgroup of $G$?\n",
-    "7.    Let $f:G\\rightarrow C_4$ be the function from $G$ to the cyclic group of order $4$, given by:\n",
+    "7.    Is $f$ a homomorphism, where $f:G\\rightarrow C_4$ is the function from $G$ to the cyclic group of order $4$ given by:\n",
     "$$f =\n",
     "  \\begin{pmatrix}\n",
     "    0 & 1 & 2 & 3 & 4 & 5\\\\\n",
     "    g & e & g^2 & g^3 & e & g^2\n",
-    "  \\end{pmatrix}$$\n",
-    "  Is $f$ a homomorphism?\n",
-    "\n",
+    "  \\end{pmatrix}?$$\n",
+    "  \n",
     "*11 Marks*"
    ]
   },
