--- a/PureMaths/FoPM_cwk_2025_26.ipynb
+++ b/PureMaths/FoPM_cwk_2025_26.ipynb
@@ -673,21 +673,21 @@
    "outputs": [],
    "source": [
     "#Enter part 2c answers here:\n",
-    "Q2c_answer1 = {'f','g','h','p','q','r'}  # Delete as appropriate\n",
+    "Q2c_answer1 = {'f','g','h','p','q','r','s','t','v'}  # Delete as appropriate\n",
     "\n",
-    "Q2c_answer2 = {'f','g','h','p','q','r'}  # Delete as appropriate\n",
+    "Q2c_answer2 = {'f','g','h','p','q','r','s','t','v'}  # Delete as appropriate\n",
     "\n",
-    "Q2c_answer3 = {'f','g','h','p','q','r'}  # Delete as appropriate\n",
+    "Q2c_answer3 = {'f','g','h','p','q','r','s','t','v'}  # Delete as appropriate\n",
     "\n",
-    "Q2c_answer4 = {'f','g','h','p','q','r'}  # Delete as appropriate\n",
+    "Q2c_answer4 = {'f','g','h','p','q','r','s','t','v'}  # Delete as appropriate\n",
     "\n",
-    "Q2c_answer5 = {'f','g','h','p','q','r'}  # Delete as appropriate\n",
+    "Q2c_answer5 = {'f','g','h','p','q','r','s','t','v'}  # Delete as appropriate\n",
     "\n",
-    "Q2c_answer6 = {'f','g','h','p','q','r'}  # Delete as appropriate\n",
+    "Q2c_answer6 = {'f','g','h','p','q','r','s','t','v'  # Delete as appropriate\n",
     "\n",
-    "Q2c_answer7 = {'f','g','h','p','q','r'}  # Delete as appropriate\n",
+    "Q2c_answer7 = {'f','g','h','p','q','r','s','t','v'}  # Delete as appropriate\n",
     "\n",
-    "Q2c_answer8 = {'f','g','h','p','q','r'}  # Delete as appropriate"
+    "Q2c_answer8 = {'f','g','h','p','q','r','s','t','v'}  # Delete as appropriate"
    ]
   },
   {
